change the admin panel

--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="TopGym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Us | Template</title>
+    <title>TopGym | Fitness HTML Template</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,700,900" rel="stylesheet">
@@ -44,7 +44,7 @@
                                 <li><a href="./about-us.html">About us</a></li>
                                 <li><a href="./classes.html">Classes</a></li>
                                 <li><a href="./elements.html">Instructors</a></li>
-                                <li><a href="./blog.html">News</a></li>
+                                <li><a href="./blog.html">Gallery</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
                                 <li class="search-btn search-trigger"><i class="fa fa-search"></i></li>
                             </ul>
@@ -116,18 +116,19 @@
             <div class="row">
                 <div class="col-lg-7">
                     <div class="about-text">
-                        <p class="t-text">Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit
-                            nisl quis nulla pretium, vitae ornare leoltricies arcu a tellus pellentesque ultrices. Ut
-                            euismod luctus elit id eleifend. Donec semper massa a imperdiet mattis. In vel mattis neque, nec ultricies lectus. Morbi auctor lacus nec hendrerit consectetur. </p>
+                        <p class="t-text">Discover what sets us apart — a gym built to empower every fitness journey.
+                            From modern equipment to expert guidance, we offer state-of-the-art machines, certified
+                            trainers, dynamic group classes, a clean and safe environment, and flexible memberships to
+                            support all fitness levels. </p>
                         <div class="about-features">
                             <div class="about-features-item">
                                 <div class="about-feature-img">
                                     <img src="img/check.png" alt="">
                                 </div>
                                 <div class="about-feature-text">
-                                    <h4>We have the best Gym Trainers</h4>
-                                    <p>Arcu a tellus pellentesque ultrices. Ut euismod luctus elit id eleifend. Donec
-                                        semper massa a imperdiet mattis. In vel mattis neque, nec ultricies lectus. </p>
+                                    <h4>Professional Training Team</h4>
+                                    <p>Our experienced team is committed to helping you build strength, improve
+                                        endurance, and stay focused with expert guidance </p>
                                 </div>
                             </div>
                             <div class="about-features-item">
@@ -135,13 +136,13 @@
                                     <img src="img/check.png" alt="">
                                 </div>
                                 <div class="about-feature-text">
-                                    <h4>The best fitness facilities</h4>
-                                    <p>Arcu a tellus pellentesque ultrices. Ut euismod luctus elit id eleifend. Donec
-                                        semper massa a imperdiet mattis. In vel mattis neque, nec ultricies lectus. </p>
+                                    <h4>Elite Trainer Support</h4>
+                                    <p>Get access to elite trainers who deliver personalized attention, ensuring your
+                                        workouts are optimized for the best possible results. </p>
                                 </div>
                             </div>
                         </div>
-                        <a href="#" class="primary-btn">Read about topgym</a>
+                        <!-- <a href="#" class="primary-btn">Read about topgym</a> -->
                     </div>
                 </div>
                 <div class="col-lg-5">
@@ -165,7 +166,11 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="skill-text">
-                        <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla pretium. Dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla pretium. Dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla pretium. Dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla pretium.</p>
+                        <p>We’re more than just a gym — we’re your fitness partner. With a passion for wellness and a
+                            commitment to your goals, we offer a supportive space that motivates you to become your best
+                            self. Whether you’re a beginner or a fitness enthusiast, our expert trainers, modern
+                            amenities, and welcoming community make us the perfect choice for your transformation
+                            journey</p>
                     </div>
                 </div>
                 <div class="col-lg-6 offset-lg-1">
@@ -252,9 +257,9 @@
                     <div class="testimonial-content">
                         <div class="testimonial-pic set-bg" data-setbg="img/testimonial/testimonial-1.png"></div>
                         <div class="testimonial-text">
-                            <h4>Megan Smith, <span>Client</span></h4>
-                            <p>Arcu a tellus pellentesque ultrices. Ut euismod luctus elit id eleifend. Donec semper
-                                massa a imperdiet mattis. In vel mattis neque, nec ultricies lectus. </p>
+                            <h4>rahul, <span>Client</span></h4>
+                            <p>Amazing gym with top-class equipment and friendly staff. I’ve seen real results in just a
+                                few months! </p>
                         </div>
                     </div>
                 </div>
@@ -262,9 +267,9 @@
                     <div class="testimonial-content">
                         <div class="testimonial-pic set-bg" data-setbg="img/testimonial/testimonial-2.png"></div>
                         <div class="testimonial-text">
-                            <h4>Michael Joe, <span>Client</span></h4>
-                            <p>Arcu a tellus pellentesque ultrices. Ut euismod luctus elit id eleifend. Donec semper
-                                massa a imperdiet mattis. In vel mattis neque, nec ultricies lectus. </p>
+                            <h4>sneha <span>Client</span></h4>
+                            <p>The trainers are very knowledgeable and supportive. Every workout feels customized to my
+                                goals </p>
                         </div>
                     </div>
                 </div>
@@ -280,8 +285,8 @@
                     <div class="about-callto-text">
                         <div class="cl-left">
                             <h2>Join our gym now!</h2>
-                            <p>Arcu a tellus pellentesque ultrices. Ut euismod luctus elit id eleifend. Donec semper
-                                massa a imperdiet mattis. </p>
+                            <p>Start your fitness journey today with expert trainers, top equipment, and a community
+                                that keeps you motivated! </p>
                         </div>
                         <div class="cl-right">
                             <a href="#" class="primary-btn">Join</a>
@@ -296,43 +301,44 @@
     <footer class="footer-section set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="footer-content">
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
-                        </div>
-                        <div class="footer-menu">
-                            <ul>
-                                <li><a href="./home.html">Home</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Classes</a></li>
-                                <li><a href="#">Instructors</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="subscribe-form">
-                            <form action="#">
-                                <input type="text" placeholder="your Email">
-                                <button type="submit">Sign Up</button>
-                            </form>
-                        </div>
-                        <div class="social-links">
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </div>
-                        <div class="footer-icon-img">
-                            <img src="img/footer-icon.png" alt="">
-                        </div>
-                        <div class="copyright">
-                           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </div>
+                <div class="col-md-4 col-12">
+                    <div class="footer-logo text-center">
+                        <a href="#"><img src="img/logo.png" alt=""></a>
                     </div>
+                </div>
+
+                <div class="col-md-4 col-12">
+                    <div class="footer-menu text-center">
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="about-us.html">About us</a></li>
+                            <li><a href="classes.html">Classes</a></li>
+                            <li><a href="blog.html">Gallery</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="social-links text-center">
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-behance"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-content">
+                <div class="footer-icon-img">
+                    <img src="img/footer-icon.png" alt="">
+                </div>
+                <div class="copyright">
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script>terms and condition |privacy and policy
+                    <i class="fa fa-heart-o" aria-hidden="true"></i> <a href="https://bhavicreationspvtltd.com/"
+                        target="_blank">Branded By by bhavi crreation</a>
                 </div>
             </div>
         </div>
