--- a/classes.html
+++ b/classes.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="TopGym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Classes | Template</title>
+    <title>TopGym | Fitness HTML Template</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,700,900" rel="stylesheet">
@@ -44,7 +44,7 @@
                                 <li><a href="./about-us.html">About us</a></li>
                                 <li><a href="./classes.html">Classes</a></li>
                                 <li><a href="./elements.html">Instructors</a></li>
-                                <li><a href="./blog.html">News</a></li>
+                                <li><a href="./blog.html">Gallery</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
                                 <li class="search-btn search-trigger"><i class="fa fa-search"></i></li>
                             </ul>
@@ -113,8 +113,8 @@
                         </div>
                         <div class="classes-text">
                             <h5>Pilates</h5>
-                            <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis
-                                nulla pretium, vitae ornare leo.</p>
+                            <p>Pilates strengthens your core, improves flexibility, and enhances posture through
+                                controlled, low-impact movements.</p>
                         </div>
                     </div>
                 </div>
@@ -125,8 +125,8 @@
                         </div>
                         <div class="classes-text">
                             <h5>Body Building</h5>
-                            <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis
-                                nulla pretium, vitae ornare leo.</p>
+                            <p>Bodybuilding focuses on muscle growth, strength, and definition through disciplined
+                                training and nutrition.</p>
                         </div>
                     </div>
                 </div>
@@ -137,8 +137,8 @@
                         </div>
                         <div class="classes-text">
                             <h5>Fitness</h5>
-                            <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis
-                                nulla pretium, vitae ornare leo.</p>
+                            <p>Fitness is the foundation of a healthy lifestyle, improving strength, endurance,
+                                flexibility, and overall well-being.</p>
                         </div>
                     </div>
                 </div>
@@ -149,8 +149,8 @@
                         </div>
                         <div class="classes-text">
                             <h5>Yoga</h5>
-                            <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis
-                                nulla pretium, vitae ornare leo.</p>
+                            <p>Yoga promotes physical and mental wellness by combining mindful movement, breath control,
+                                and meditation..</p>
                         </div>
                     </div>
                 </div>
@@ -161,8 +161,8 @@
                         </div>
                         <div class="classes-text">
                             <h5>Trx</h5>
-                            <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis
-                                nulla pretium, vitae ornare leo.</p>
+                            <p>TRX is a suspension training system that uses body weight exercises to improve strength,
+                                flexibility, and balance.</p>
                         </div>
                     </div>
                 </div>
@@ -173,8 +173,8 @@
                         </div>
                         <div class="classes-text">
                             <h5>Spinning</h5>
-                            <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis
-                                nulla pretium, vitae ornare leo.</p>
+                            <p>Spinning is an intense indoor cycling workout that boosts cardiovascular health, burns
+                                calories, and strengthens legs.</p>
                         </div>
                     </div>
                 </div>
@@ -193,8 +193,8 @@
                         </div>
                         <div class="fitness-text">
                             <h4>Get fitted</h4>
-                            <p>Arcu a tellus pellentesque ultrices. Ut euismod luctus elit id eleifend. Donec semper
-                                massa a imperdiet mattis. </p>
+                            <p>Get fitted with personalized workouts and expert guidance to reach your fitness goals and
+                                transform your body.. </p>
                         </div>
                     </div>
                     <div class="single-fitness-feature">
@@ -203,8 +203,8 @@
                         </div>
                         <div class="fitness-text">
                             <h4>Try Pilates</h4>
-                            <p>Ut euismod luctus elit id eleifend. Donec semper massa a imperdiet mattis. In vel mattis
-                                neque, nec ultricies lectus. </p>
+                            <p>Try Pilates to improve your flexibility, core strength, and posture with low-impact
+                                exercises that enhance overall body control </p>
                         </div>
                     </div>
                     <div class="single-fitness-feature">
@@ -213,8 +213,8 @@
                         </div>
                         <div class="fitness-text">
                             <h4>Healthy Diet</h4>
-                            <p>Arcu a tellus pellentesque ultrices. Ut euismod luctus elit id eleifend. Donec semper
-                                massa a imperdiet mattis. </p>
+                            <p>A healthy diet fuels your body with essential nutrients, supporting energy, strength, and
+                                overall well-being </p>
                         </div>
                     </div>
                 </div>
@@ -225,8 +225,7 @@
                         </div>
                         <div class="fitness-text left-text">
                             <h4>Meditation</h4>
-                            <p>Arcu a tellus pellentesque ultrices. Ut euismod luctus elit id eleifend. Donec semper
-                                massa a imperdiet mattis. </p>
+                            <p>Meditation calms the mind, reduces stress, and enhances mental clarity by focusing on breath and mindfulness </p>
                         </div>
                     </div>
                     <div class="single-fitness-feature">
@@ -235,8 +234,7 @@
                         </div>
                         <div class="fitness-text left-text">
                             <h4>Diet Plan</h4>
-                            <p>Ut euismod luctus elit id eleifend. Donec semper massa a imperdiet mattis. In vel mattis
-                                neque, nec ultricies lectus. </p>
+                            <p>A personalized diet plan helps you nourish your body, reach fitness goals, and maintain a balanced, healthy lifestyle. </p>
                         </div>
                     </div>
                     <div class="single-fitness-feature">
@@ -245,8 +243,7 @@
                         </div>
                         <div class="fitness-text left-text">
                             <h4>Grow Muscles</h4>
-                            <p>Arcu a tellus pellentesque ultrices. Ut euismod luctus elit id eleifend. Donec semper
-                                massa a imperdiet mattis. </p>
+                            <p>Growing muscles requires a combination of strength training, proper nutrition, and recovery to build size and strength </p>
                         </div>
                     </div>
                 </div>
@@ -255,7 +252,7 @@
     </section>
     <!-- Fitness Plan End -->
     <!-- Classes Call To Action Section -->
-    <section class="classes-callto-section set-bg" data-setbg="img/classes/classes-callto-bg.jpg">
+    <!-- <section class="classes-callto-section set-bg" data-setbg="img/classes/classes-callto-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -269,49 +266,50 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Classes Call To Action End -->
     <!-- Footer Section Begin -->
     <footer class="footer-section set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="footer-content">
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
-                        </div>
-                        <div class="footer-menu">
-                            <ul>
-                                <li><a href="./home.html">Home</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Classes</a></li>
-                                <li><a href="#">Instructors</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="subscribe-form">
-                            <form action="#">
-                                <input type="text" placeholder="your Email">
-                                <button type="submit">Sign Up</button>
-                            </form>
-                        </div>
-                        <div class="social-links">
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </div>
-                        <div class="footer-icon-img">
-                            <img src="img/footer-icon.png" alt="">
-                        </div>
-                        <div class="copyright">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </div>
+                <div class="col-md-4 col-12">
+                    <div class="footer-logo text-center">
+                        <a href="#"><img src="img/logo.png" alt=""></a>
                     </div>
+                </div>
+
+                <div class="col-md-4 col-12">
+                    <div class="footer-menu text-center">
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="about-us.html">About us</a></li>
+                            <li><a href="classes.html">Classes</a></li>
+                            <li><a href="blog.html">Gallery</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="social-links text-center">
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-behance"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-content">
+                <div class="footer-icon-img">
+                    <img src="img/footer-icon.png" alt="">
+                </div>
+                <div class="copyright">
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script>terms and condition |privacy and policy
+                    <i class="fa fa-heart-o" aria-hidden="true"></i> <a href="https://bhavicreationspvtltd.com/"
+                        target="_blank">Branded By by bhavi crreation</a>
                 </div>
             </div>
         </div>
