--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="TopGym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact | Template</title>
+    <title>TopGym | Fitness HTML Template</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,700,900" rel="stylesheet">
@@ -44,7 +44,7 @@
                                 <li><a href="./about-us.html">About us</a></li>
                                 <li><a href="./classes.html">Classes</a></li>
                                 <li><a href="./elements.html">Instructors</a></li>
-                                <li><a href="./blog.html">News</a></li>
+                                <li><a href="./blog.html">Gallery</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
                                 <li class="search-btn search-trigger"><i class="fa fa-search"></i></li>
                             </ul>
@@ -110,9 +110,9 @@
                     <div class="contact-info">
                         <div class="contact-details">
                             <h2>Get in Touch</h2>
-                            <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis
-                                nulla pretium, vitae ornare leo.Aenean id auctor libero, gravida venenatis justo. Sed ut
-                                arcu nibh. Fusce lacinia arcu in ultrices finibus. Donec vestibulum imperdiet efficitur.
+                            <p>We’d love to hear from you! Whether you have a question, need assistance, or want to
+                                learn more about our gym and fitness programs, our team is here to help. Reach out to us
+                                today, and let's start your fitness journey together
                             </p>
                             <ul class="address">
                                 <li>Main Str, no 23, New York</li>
@@ -150,43 +150,44 @@
     <footer class="footer-section set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="footer-content">
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
-                        </div>
-                        <div class="footer-menu">
-                            <ul>
-                                <li><a href="./home.html">Home</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Classes</a></li>
-                                <li><a href="#">Instructors</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="subscribe-form">
-                            <form action="#">
-                                <input type="text" placeholder="your Email">
-                                <button type="submit">Sign Up</button>
-                            </form>
-                        </div>
-                        <div class="social-links">
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </div>
-                        <div class="footer-icon-img">
-                            <img src="img/footer-icon.png" alt="">
-                        </div>
-                        <div class="copyright">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </div>
+                <div class="col-md-4 col-12">
+                    <div class="footer-logo text-center">
+                        <a href="#"><img src="img/logo.png" alt=""></a>
                     </div>
+                </div>
+
+                <div class="col-md-4 col-12">
+                    <div class="footer-menu text-center">
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="about-us.html">About us</a></li>
+                            <li><a href="classes.html">Classes</a></li>
+                            <li><a href="blog.html">Gallery</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="social-links text-center">
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-behance"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-content">
+                <div class="footer-icon-img">
+                    <img src="img/footer-icon.png" alt="">
+                </div>
+                <div class="copyright">
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script>terms and condition |privacy and policy
+                    <i class="fa fa-heart-o" aria-hidden="true"></i> <a href="https://bhavicreationspvtltd.com/"
+                        target="_blank">Branded By by bhavi crreation</a>
                 </div>
             </div>
         </div>
