--- a/elements.html
+++ b/elements.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="TopGym, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Elements | Template</title>
+    <title>TopGym | Fitness HTML Template</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,700,900" rel="stylesheet">
@@ -44,7 +44,7 @@
                                 <li><a href="./about-us.html">About us</a></li>
                                 <li><a href="./classes.html">Classes</a></li>
                                 <li><a href="./elements.html">Instructors</a></li>
-                                <li><a href="./blog.html">News</a></li>
+                                <li><a href="./blog.html">Gallery</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
                                 <li class="search-btn search-trigger"><i class="fa fa-search"></i></li>
                             </ul>
@@ -105,7 +105,7 @@
     <!-- Elements Section Begin -->
     <section class="element-section">
         <div class="container">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12">
                     <div class="button-elem">
                         <h2>Buttons</h2>
@@ -115,7 +115,7 @@
                         <a href="#" class="primary-btn sky-btn">Send Message</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-lg-6">
                     <div class="accordin-elem">
@@ -124,15 +124,15 @@
                             <div class="card">
                                 <div class="card-heading">
                                     <a data-toggle="collapse" data-target="#collapseOne">
-                                        Vehicula, accumsan massa eu, imperdiet
+                                        Strength Training for Muscle Growth
                                     </a>
                                 </div>
-                                <div id="collapseOne" class="collapse"
-                                    data-parent="#accordionExample">
+                                <div id="collapseOne" class="collapse" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta tenetur quo
-                                            explicabo, ipsa culpa perferendis tempore! Quas nisi nihil delectus
-                                            suscipit, pariatur maxime officiis dolore, totam ullam incidunt id eaque.
+                                        <p>Strength training involves exercises that use resistance to build muscle
+                                            mass, increase strength, and enhance endurance. Common methods include
+                                            weight lifting, bodyweight exercises, and resistance bands. Regular strength
+                                            training can help tone muscles, boost metabolism, and improve bone health.
                                         </p>
                                     </div>
                                 </div>
@@ -140,30 +140,25 @@
                             <div class="card">
                                 <div class="card-heading">
                                     <a data-toggle="collapse" data-target="#collapseTwo">
-                                        Nunc nec nunc vehicula, accumsan massa
+                                        Cardio Workouts for Heart Health
                                     </a>
                                 </div>
                                 <div id="collapseTwo" class="collapse" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta tenetur quo
-                                            explicabo, ipsa culpa perferendis tempore! Quas nisi nihil delectus
-                                            suscipit, pariatur maxime officiis dolore, totam ullam incidunt id eaque.
+                                        <p>Cardiovascular exercise, or cardio, includes activities that elevate the heart rate and improve heart and lung function. Popular cardio workouts include running, cycling, swimming, and HIIT (High-Intensity Interval Training). Regular cardio helps improve stamina, burn fat, and lower the risk of heart disease
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-heading active">
-                                    <a class="active" data-toggle="collapse"
-                                        data-target="#collapseThree">
-                                        Aenean id auctor libero, gravida venenatis justo
+                                    <a class="active" data-toggle="collapse" data-target="#collapseThree">
+                                        Flexibility and Mobility Training
                                     </a>
                                 </div>
                                 <div id="collapseThree" class="collapse show" data-parent="#accordionExample">
                                     <div class="card-body">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta tenetur quo
-                                            explicabo, ipsa culpa perferendis tempore! Quas nisi nihil delectus
-                                            suscipit, pariatur maxime officiis dolore, totam ullam incidunt id eaque.
+                                        <p>Flexibility and mobility training focuses on improving the range of motion in the joints and muscles. Practices such as yoga, Pilates, and dynamic stretching can enhance flexibility, reduce the risk of injury, and relieve muscle tension
                                         </p>
                                     </div>
                                 </div>
@@ -186,29 +181,40 @@
                         </ul><!-- Tab panes -->
                         <div class="tab-content">
                             <div class="tab-pane" id="tabs-1" role="tabpanel">
-                                <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl
-                                    quis nulla pretium, vitae ornare leoltricies arcu a tellus pellentesque ultrices. Ut
-                                    euismod luctus elit id eleifend. Donec semper massa a imperdiet mattis. In vel
-                                    mattis neque, nec ultricies lectus. Morbi auctor lacus nec hendrerit consectetur.
+                                <p>Pilates is a low-impact workout system focused on strengthening the core, improving
+                                    flexibility, and enhancing overall body control. It combines mindful movement,
+                                    breathing techniques, and precise exercises to target muscles, especially in the
+                                    abdomen, lower back, and hips. Suitable for all fitness levels, Pilates helps
+                                    improve posture, reduce stress, and increase flexibility, making it an excellent
+                                    choice for those looking for a full-body workout that promotes balance and stability
                                 </p>
                             </div>
                             <div class="tab-pane" id="tabs-2" role="tabpanel">
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed maiores saepe, dolore
-                                    et corporis dolor, in animi quod, praesentium deserunt delectus? Odio quis nesciunt
-                                    corporis labore blanditiis optio aliquid dolor, repudiandae ut doloremque explicabo
-                                    recusandae! Dolores nisi repellendus saepe quam.</p>
+                                <p>Bodybuilding is a strength training discipline focused on building muscle mass,
+                                    enhancing muscle definition, and improving overall physical strength. It involves
+                                    intense resistance exercises, such as weight lifting, combined with a balanced diet
+                                    rich in protein to support muscle growth. Bodybuilders follow structured workout
+                                    routines that target different muscle groups and focus on progressive overload to
+                                    continuously challenge the body. With dedication to training, nutrition, and
+                                    recovery, bodybuilding helps individuals achieve a sculpted physique and develop
+                                    strength.</p>
                             </div>
                             <div class="tab-pane active" id="tabs-3" role="tabpanel">
-                                <p>It is a long established fact that a reader will be distracted by the readable
-                                    content of a page when looking at its layout. The point of using Lorem Ipsum is that
-                                    it has a more-or-less normal distribution of letters, as opposed to using 'Content
-                                    here, content here', making it look like readable English.</p>
+                                <p>Fitness refers to the overall health and well-being of the body, achieved through
+                                    regular physical activity, balanced nutrition, and a healthy lifestyle. It includes
+                                    various components such as strength, endurance, flexibility, and cardiovascular
+                                    health. Regular exercise, whether it's strength training, cardio, or flexibility
+                                    exercises, helps improve physical performance, reduce the risk of chronic diseases,
+                                    and enhance mental health. Fitness is not just about looking good; it’s about
+                                    feeling strong, energized, and maintaining a healthy body for a longer, more active
+                                    lif
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row m-80">
+            <!-- <div class="row m-80">
                 <div class="col-lg-12">
                     <div class="milestone-title">
                         <h2>Milestones</h2>
@@ -261,7 +267,8 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="single-loader">
                         <div class="loader-circle-wrap">
-                            <div class="circle-progress" data-cpid="id-1" data-cpvalue="75" data-cpcolor="#233ede"></div>
+                            <div class="circle-progress" data-cpid="id-1" data-cpvalue="75" data-cpcolor="#233ede">
+                            </div>
                         </div>
                         <span>Morbi auctor lacus</span>
                     </div>
@@ -269,7 +276,8 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="single-loader">
                         <div class="loader-circle-wrap">
-                            <div class="circle-progress" data-cpid="id-2" data-cpvalue="25" data-cpcolor="#233ede"></div>
+                            <div class="circle-progress" data-cpid="id-2" data-cpvalue="25" data-cpcolor="#233ede">
+                            </div>
                         </div>
                         <span>Morbi auctor lacus</span>
                     </div>
@@ -277,7 +285,8 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="single-loader">
                         <div class="loader-circle-wrap">
-                            <div class="circle-progress" data-cpid="id-3" data-cpvalue="50" data-cpcolor="#233ede"></div>
+                            <div class="circle-progress" data-cpid="id-3" data-cpvalue="50" data-cpcolor="#233ede">
+                            </div>
                         </div>
                         <span>Morbi auctor lacus</span>
                     </div>
@@ -285,13 +294,14 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="single-loader">
                         <div class="loader-circle-wrap">
-                            <div class="circle-progress" data-cpid="id-4" data-cpvalue="75" data-cpcolor="#233ede"></div>
+                            <div class="circle-progress" data-cpid="id-4" data-cpvalue="75" data-cpcolor="#233ede">
+                            </div>
                         </div>
                         <span>Morbi auctor lacus</span>
                     </div>
-                    
+
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="icon-box-title">
@@ -304,8 +314,8 @@
                             <img src="img/features/icon-1.png" alt="">
                         </div>
                         <h5>Amazing Setting</h5>
-                        <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla
-                            pretium, vitae ornare leo.</p>
+                        <p>Experience your workouts in a vibrant, well-designed space that motivates you every step
+                            of the way.</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -314,8 +324,8 @@
                             <img src="img/features/icon-2.png" alt="">
                         </div>
                         <h5>Best Trainers</h5>
-                        <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla
-                            pretium, vitae ornare leo.</p>
+                        <p>Train with certified experts dedicated to guiding, motivating, and transforming your
+                            fitness journey.</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -324,8 +334,8 @@
                             <img src="img/features/icon-3.png" alt="">
                         </div>
                         <h5>Diet Plans</h5>
-                        <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla
-                            pretium, vitae ornare leo.</p>
+                        <p>Get personalized diet plans tailored to fuel your workouts and accelerate your fitness
+                            results.</p>
                     </div>
                 </div>
             </div>
@@ -336,43 +346,44 @@
     <footer class="footer-section set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="footer-content">
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
-                        </div>
-                        <div class="footer-menu">
-                            <ul>
-                                <li><a href="./home.html">Home</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Classes</a></li>
-                                <li><a href="#">Instructors</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="subscribe-form">
-                            <form action="#">
-                                <input type="text" placeholder="your Email">
-                                <button type="submit">Sign Up</button>
-                            </form>
-                        </div>
-                        <div class="social-links">
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </div>
-                        <div class="footer-icon-img">
-                            <img src="img/footer-icon.png" alt="">
-                        </div>
-                        <div class="copyright">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </div>
+                <div class="col-md-4 col-12">
+                    <div class="footer-logo text-center">
+                        <a href="#"><img src="img/logo.png" alt=""></a>
                     </div>
+                </div>
+
+                <div class="col-md-4 col-12">
+                    <div class="footer-menu text-center">
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="about-us.html">About us</a></li>
+                            <li><a href="classes.html">Classes</a></li>
+                            <li><a href="blog.html">Gallery</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="social-links text-center">
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-behance"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-content">
+                <div class="footer-icon-img">
+                    <img src="img/footer-icon.png" alt="">
+                </div>
+                <div class="copyright">
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script>terms and condition |privacy and policy
+                    <i class="fa fa-heart-o" aria-hidden="true"></i> <a href="https://bhavicreationspvtltd.com/"
+                        target="_blank">Branded By by bhavi crreation</a>
                 </div>
             </div>
         </div>
