--- a/index.html
+++ b/index.html
@@ -42,10 +42,15 @@
                             <ul>
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./about-us.html">About us</a></li>
-                                <li><a href="./classes.html">Classes</a></li>
+
                                 <li><a href="./elements.html">Instructors</a></li>
-                                <li><a href="./blog.html">News</a></li>
+
+                                <li><a href="./classes.html">Classes</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
+
+                                <li><a href="./blog.html">Gallery</a></li>
+
+
                                 <li class="search-btn search-trigger"><i class="fa fa-search"></i></li>
                             </ul>
                         </nav>
@@ -89,19 +94,19 @@
     <section class="hero-slider">
         <div class="slide-items owl-carousel">
             <div class="single-slide set-bg active" data-setbg="img/bg.jpg">
-                <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a>
+                <!-- <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a> -->
                 <h1>Be Fit.Top Gym</h1>
-                <a href="#" class="primary-btn">Read More</a>
+                <!-- <a href="#" class="primary-btn">Read More</a> -->
             </div>
             <div class="single-slide set-bg" data-setbg="img/bg-2.jpg">
-                <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a>
+                <!-- <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a> -->
                 <h1>Be Fit.Top Trainer</h1>
-                <a href="#" class="primary-btn">Read More</a>
+                <!-- <a href="#" class="primary-btn">Read More</a> -->
             </div>
             <div class="single-slide set-bg" data-setbg="img/bg-3.jpg">
-                <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a>
+                <!-- <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a> -->
                 <h1>Be Fit.Top Body</h1>
-                <a href="#" class="primary-btn">Read More</a>
+                <!-- <a href="#" class="primary-btn">Read More</a> -->
             </div>
         </div>
     </section>
@@ -120,8 +125,8 @@
                                 <img src="img/features/icon-1.png" alt="">
                             </div>
                             <h5>Amazing Setting</h5>
-                            <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis
-                                nulla pretium, vitae ornare leo.</p>
+                            <p>Experience your workouts in a vibrant, well-designed space that motivates you every step
+                                of the way.</p>
                         </div>
                     </div>
                 </div>
@@ -135,8 +140,8 @@
                                 <img src="img/features/icon-2.png" alt="">
                             </div>
                             <h5>Best Trainers</h5>
-                            <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis
-                                nulla pretium, vitae ornare leo.</p>
+                            <p>Train with certified experts dedicated to guiding, motivating, and transforming your
+                                fitness journey.</p>
                         </div>
                     </div>
                 </div>
@@ -150,8 +155,8 @@
                                 <img src="img/features/icon-3.png" alt="">
                             </div>
                             <h5>Diet Plans</h5>
-                            <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis
-                                nulla pretium, vitae ornare leo.</p>
+                            <p>Get personalized diet plans tailored to fuel your workouts and accelerate your fitness
+                                results</p>
                         </div>
                     </div>
                 </div>
@@ -175,40 +180,40 @@
                     <div class="single-service">
                         <img src="img/icon-1.png" alt="">
                         <h5>Pilates</h5>
-                        <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla
-                            pretium.</p>
+                        <p>Pilates improves core strength, flexibility, posture, and overall body balance through
+                            controlled, low-impact movements.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-service c-text">
                         <img src="img/icon-2.png" alt="">
                         <h5>Free Lifting</h5>
-                        <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla
-                            pretium.</p>
+                        <p>Free lifting builds raw strength, stability, and muscle control using dumbbells, barbells,
+                            and body-weight resistance</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-service">
                         <img src="img/icon-3.png" alt="">
                         <h5>Yoga</h5>
-                        <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla
-                            pretium.</p>
+                        <p>Yoga enhances flexibility, reduces stress, and promotes overall physical and mental
+                            well-being through mindful movement and breath control.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="single-service">
                         <img src="img/icon-4.png" alt="">
                         <h5>Spinning</h5>
-                        <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla
-                            pretium.</p>
+                        <p>Spinning is a high-energy cardio workout that boosts endurance, burns calories, and
+                            strengthens your lower body.</p>
                     </div>
                 </div>
             </div>
-            <div class="row p-70">
+            <!-- <div class="row p-70">
                 <div class="col-lg-12 text-center">
                     <a href="#" class="service-btn primary-btn">see all the services</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Services Section End -->
@@ -220,7 +225,7 @@
                     <div class="section-title">
                         <span>The Best</span>
                         <h2>Trainers</h2>
-                        <a href="#" class="primary-btn trainer-btn">See All</a>
+                        <!-- <a href="#" class="primary-btn trainer-btn">See All</a> -->
                     </div>
                 </div>
             </div>
@@ -307,9 +312,10 @@
                             <span>New</span>
                             <h5>Personal Trainer</h5>
                         </div>
-                        <p>Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl quis nulla
-                            pretium.Pellentesque dictum nisl in nibh dictum volutpat nec a quam. Vivamus suscipit nisl
-                            quis nulla pretium.</p>
+                        <p>A personal trainer provides expert guidance, custom workout plans, and motivation tailored to
+                            your fitness goals <br>
+                            They ensure proper form, track progress, and help you achieve faster, safer, and lasting
+                            result</p>
                         <div class="member-signup-btn">
                             <a href="#" class="primary-btn">Sign up Now</a>
                         </div>
@@ -323,48 +329,100 @@
     <footer class="footer-section set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="footer-content">
-                        <div class="footer-logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
-                        </div>
-                        <div class="footer-menu">
-                            <ul>
-                                <li><a href="./index.html">Home</a></li>
-                                <li><a href="#">About us</a></li>
-                                <li><a href="#">Classes</a></li>
-                                <li><a href="#">Instructors</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="subscribe-form">
-                            <form action="#">
-                                <input type="text" placeholder="your Email">
-                                <button type="submit">Sign Up</button>
-                            </form>
-                        </div>
-                        <div class="social-links">
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </div>
-                        <div class="footer-icon-img">
-                            <img src="img/footer-icon.png" alt="">
-                        </div>
-                        <div class="copyright">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </div>
+                <div class="col-md-4 col-12">
+                    <div class="footer-logo text-center">
+                        <a href="#"><img src="img/logo.png" alt=""></a>
                     </div>
+                </div>
+
+                <div class="col-md-4 col-12">
+                    <div class="footer-menu text-center">
+                        <ul>
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="about-us.html">About us</a></li>
+                            <li><a href="classes.html">Classes</a></li>
+                            <li><a href="blog.html">Gallery</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="social-links text-center">
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-behance"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-content">
+                <div class="footer-icon-img">
+                    <img src="img/footer-icon.png" alt="">
+                </div>
+                <div class="copyright">
+                    Copyright &copy;
+                    <script>document.write(new Date().getFullYear());</script>terms and condition |privacy and policy
+                    <i class="fa fa-heart-o" aria-hidden="true"></i> <a href="https://bhavicreationspvtltd.com/"
+                        target="_blank">Branded By by bhavi crreation</a>
                 </div>
             </div>
         </div>
     </footer>
-    <!-- Footer Section End -->
+
+
+
+    <script>
+        // JavaScript to apply background image from the data-setbg attribute
+        document.querySelectorAll('.set-bg').forEach(function (el) {
+            var bg = el.getAttribute('data-setbg');
+            el.style.backgroundImage = 'url(' + bg + ')';
+        });
+
+    </script>
+    <!-- Footer Section End 
+
+
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-12">
+                    <div class="footer-logo text-center">
+                        <a href="#"><img src="img/logo.png" alt=""></a>
+                    </div>
+
+                </div>
+
+                 <div class="col-md-4 col-12">
+                <div class="footer-menu text-center">
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="about-us.html">About us</a></li>
+                        <li><a href="classes.html">Classes</a></li>
+
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+
+
+
+            <div class="col-md-4 col-12">
+                <div class="social-links text-center">
+                    <a href="#"><i class="fa fa-pinterest"></i></a>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-dribbble"></i></a>
+                    <a href="#"><i class="fa fa-behance"></i></a>
+                </div>
+            </div>
+            </div>
+        </div>
+    </footer>-->
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
